[gd_scene load_steps=7 format=3 uid="uid://chjdbc8r5p4jh"]

[ext_resource type="Script" path="res://TableController.gd" id="1_yo7rq"]
[ext_resource type="Texture2D" uid="uid://x2ccvfnapp8g" path="res://assets/table/table.png" id="2_x2xcq"]
[ext_resource type="Texture2D" uid="uid://bd35351v0i8ic" path="res://assets/cards/1.png" id="3_8bf1k"]
[ext_resource type="PackedScene" uid="uid://cw8ivqxcvkxyk" path="res://nodes/CardsToDeal.tscn" id="4_gqlal"]
[ext_resource type="PackedScene" uid="uid://cikxyaxg1jgti" path="res://nodes/DeckCards.tscn" id="5_1s2j8"]

[sub_resource type="SystemFont" id="SystemFont_p4rry"]
subpixel_positioning = 0

[node name="TableControl" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_yo7rq")
metadata/_edit_vertical_guides_ = [960.0]
metadata/_edit_horizontal_guides_ = [680.0]

[node name="Table" type="Sprite2D" parent="."]
texture = ExtResource("2_x2xcq")
centered = false

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 1728.0
offset_top = 40.0
offset_right = 1896.0
offset_bottom = 104.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("SystemFont_p4rry")
theme_override_font_sizes/font_size = 30
text = "Exit Table"

[node name="Seats" type="Node2D" parent="."]

[node name="Seat1" type="Node2D" parent="Seats"]
position = Vector2(704, 720)

[node name="CardList" type="HBoxContainer" parent="Seats/Seat1"]
layout_direction = 2
offset_left = 8.00006
offset_top = 40.0001
offset_right = 338.0
offset_bottom = 292.0
scale = Vector2(0.8, 0.8)

[node name="Counter" type="Label" parent="Seats/Seat1"]
offset_left = 64.0
offset_top = -32.0
offset_right = 168.0
offset_bottom = 8.0
text = "30S"

[node name="Points" type="Label" parent="Seats/Seat1"]
offset_left = 264.0
offset_top = -32.0
offset_right = 344.0
text = "99999"

[node name="Nickname" type="Label" parent="Seats/Seat1"]
offset_left = 168.0
offset_top = -32.0
offset_right = 288.0
offset_bottom = 16.0
text = "Nick1"

[node name="Seat2" type="Node2D" parent="Seats"]
position = Vector2(192, 672)
metadata/_edit_group_ = true

[node name="CardList" type="HBoxContainer" parent="Seats/Seat2"]
layout_direction = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.10352e-05
offset_top = 6.10352e-05
offset_right = 330.0
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)

[node name="Counter" type="Label" parent="Seats/Seat2"]
offset_right = 40.0
offset_bottom = 23.0

[node name="Points" type="Label" parent="Seats/Seat2"]
offset_right = 40.0
offset_bottom = 23.0

[node name="Nickname" type="Label" parent="Seats/Seat2"]
offset_right = 40.0
offset_bottom = 23.0

[node name="Seat3" type="Node2D" parent="Seats"]
position = Vector2(176, 224)

[node name="CardList" type="HBoxContainer" parent="Seats/Seat3"]
layout_direction = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -7.99994
offset_top = 6.10352e-05
offset_right = 322.0
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)

[node name="Counter" type="Label" parent="Seats/Seat3"]
offset_right = 40.0
offset_bottom = 23.0

[node name="Points" type="Label" parent="Seats/Seat3"]
offset_right = 40.0
offset_bottom = 23.0

[node name="Nickname" type="Label" parent="Seats/Seat3"]
offset_right = 40.0
offset_bottom = 23.0

[node name="Seat4" type="Node2D" parent="Seats"]
position = Vector2(832, 96)

[node name="CardList" type="HBoxContainer" parent="Seats/Seat4"]
layout_direction = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -7.99994
offset_top = 6.10352e-05
offset_right = 322.0
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)

[node name="Counter" type="Label" parent="Seats/Seat4"]
offset_right = 40.0
offset_bottom = 23.0

[node name="Points" type="Label" parent="Seats/Seat4"]
offset_right = 40.0
offset_bottom = 23.0

[node name="Nickname" type="Label" parent="Seats/Seat4"]
offset_right = 40.0
offset_bottom = 23.0

[node name="Seat5" type="Node2D" parent="Seats"]
position = Vector2(1480, 232)

[node name="CardList" type="HBoxContainer" parent="Seats/Seat5"]
layout_direction = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.00012207
offset_top = 6.10352e-05
offset_right = 330.0
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)

[node name="Counter" type="Label" parent="Seats/Seat5"]
offset_right = 40.0
offset_bottom = 23.0

[node name="Points" type="Label" parent="Seats/Seat5"]
offset_right = 40.0
offset_bottom = 23.0

[node name="Nickname" type="Label" parent="Seats/Seat5"]
offset_right = 40.0
offset_bottom = 23.0

[node name="Seat6" type="Node2D" parent="Seats"]
position = Vector2(1200, 688)

[node name="CardList" type="HBoxContainer" parent="Seats/Seat6"]
layout_direction = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 280.0
offset_top = -8.0
offset_right = 610.0
offset_bottom = 244.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)

[node name="Counter" type="Label" parent="Seats/Seat6"]
offset_right = 40.0
offset_bottom = 23.0

[node name="Points" type="Label" parent="Seats/Seat6"]
offset_right = 40.0
offset_bottom = 23.0

[node name="Nickname" type="Label" parent="Seats/Seat6"]
offset_left = 184.0
offset_top = -64.0
offset_right = 224.0
offset_bottom = -41.0

[node name="CardsOnDeck" type="Node2D" parent="."]

[node name="CardList" type="HBoxContainer" parent="CardsOnDeck"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 448.0
offset_top = 376.0
offset_right = 1214.0
offset_bottom = 628.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)

[node name="TextureRect" type="TextureRect" parent="CardsOnDeck/CardList"]
layout_mode = 2
texture = ExtResource("3_8bf1k")
stretch_mode = 2

[node name="TextureRect2" type="TextureRect" parent="CardsOnDeck/CardList"]
layout_mode = 2
texture = ExtResource("3_8bf1k")
stretch_mode = 2

[node name="TextureRect3" type="TextureRect" parent="CardsOnDeck/CardList"]
layout_mode = 2
texture = ExtResource("3_8bf1k")
stretch_mode = 2

[node name="TextureRect4" type="TextureRect" parent="CardsOnDeck/CardList"]
layout_mode = 2
texture = ExtResource("3_8bf1k")
stretch_mode = 2

[node name="TextureRect5" type="TextureRect" parent="CardsOnDeck/CardList"]
layout_mode = 2
texture = ExtResource("3_8bf1k")
stretch_mode = 2

[node name="DeckCards" parent="." instance=ExtResource("5_1s2j8")]
position = Vector2(1256, 376)

[node name="CardsToDeal" parent="." instance=ExtResource("4_gqlal")]
position = Vector2(1304, 488)

[connection signal="pressed" from="Button" to="." method="_on_exit_button_pressed"]
